fix: add calculate .tofixed and result-container add overflow

--- a/stylecommon.css
+++ b/stylecommon.css
@@ -95,6 +95,8 @@ main{
     margin: 0 0 24px;
     padding: 29px 24px 22px 0 ;
     border-radius: 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 h1{
